--- a/app/src/main/res/layout-land/activity_add_new_point.xml
+++ b/app/src/main/res/layout-land/activity_add_new_point.xml
@@ -131,7 +131,52 @@
             android:background="@drawable/bg_button"
             android:text="OK"
             android:textColor="@color/cardview_dark_background" />
+        <TextView
+            android:id="@+id/no_hp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="8dp"
+            android:textColor="#000"
+            android:textSize="18sp"
+            tools:text="No Handphone" />
 
+        <EditText
+            android:id="@+id/edt_no_hp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="13dp"
+            android:layout_marginRight="13dp"
+            android:layout_marginBottom="8dp"
+            android:hint="No Handphone"
+            android:imeOptions="actionDone"
+            android:inputType="textCapSentences"
+            android:maxLines="1" />
+
+        <TextView
+            android:id="@+id/TextpJawab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="8dp"
+            android:textColor="#000"
+            android:textSize="18sp"
+            tools:text="Nama Penanggung Jawab" />
+
+        <EditText
+            android:id="@+id/edt_pjwb"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="13dp"
+            android:layout_marginRight="13dp"
+            android:layout_marginBottom="8dp"
+            android:hint="Nama Penanggung Jawab"
+            android:imeOptions="actionDone"
+            android:maxLines="1" />
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
